// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display correct information for changes 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5baa2f3a="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="width: 15px; height: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-30428f72="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">You changed <span data-v-30428f72="" class="rich-text-file rich-text--component" attrs="[object Object]" key="h-2"><!----> <a href="http://localhost:8080/index.php/f/776">Test file - renamed.md</a> <!----></span></p>
        </div>
      </div>
      <div data-v-30428f72="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-30428f72="">
          <div data-v-30428f72=""></div>
        </div>
      </div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for comments 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5baa2f3a="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="width: 15px; height: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-30428f72="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">You commented</p>
        </div>
      </div>
      <div data-v-30428f72="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">A comment</p>
        </div>
      </div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for creations 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5baa2f3a="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="width: 15px; height: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-30428f72="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">You created <span data-v-30428f72="" class="rich-text-file rich-text--component" attrs="[object Object]" key="h-2"><!----> <a href="http://localhost:8080/index.php/f/776">Test file.md</a> <!----></span></p>
        </div>
      </div>
      <div data-v-30428f72="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-30428f72="">
          <div data-v-30428f72=""></div>
        </div>
      </div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for favorites 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5baa2f3a="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="width: 15px; height: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-30428f72="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">Added to favorites</p>
        </div>
      </div>
      <div data-v-30428f72="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-30428f72="">
          <div data-v-30428f72=""></div>
        </div>
      </div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for moves 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5baa2f3a="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="width: 15px; height: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-30428f72="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">You moved <span data-v-30428f72="" class="rich-text-file rich-text--component" attrs="[object Object]" key="h-2"><!----> <a href="http://localhost:8080/index.php/f/776">Test file.md</a> <!----></span> to <span data-v-30428f72="" class="rich-text-file rich-text--component" attrs="[object Object]" key="h-3"><!----> <a href="http://localhost:8080/index.php/f/753">Documents</a> <!----></span></p>
        </div>
      </div>
      <div data-v-30428f72="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-30428f72="">
          <div data-v-30428f72=""></div>
        </div>
      </div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for renames 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5baa2f3a="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="width: 15px; height: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-30428f72="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">You renamed <span data-v-30428f72="" class="rich-text-file rich-text--component" attrs="[object Object]" key="h-2"><!----> <a href="http://localhost:8080/index.php/f/776">Test file - renamed.md</a> <!----></span> to <span data-v-30428f72="" class="rich-text-file rich-text--component" attrs="[object Object]" key="h-3"><!----> <a href="http://localhost:8080/index.php/f/776">Test file - renamed - looooooooong.md</a> <!----></span></p>
        </div>
      </div>
      <div data-v-30428f72="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-30428f72="">
          <div data-v-30428f72=""></div>
        </div>
      </div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for shares 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5baa2f3a="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="width: 15px; height: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-30428f72="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">Shared as public link</p>
        </div>
      </div>
      <div data-v-30428f72="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-30428f72="">
          <div data-v-30428f72=""></div>
        </div>
      </div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for tags 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5baa2f3a="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="width: 15px; height: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-30428f72="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">Added system tag <strong data-v-30428f72="" attrs="[object Object]" key="h-2" class="rich-text--component">tag1</strong></p>
        </div>
      </div>
      <div data-v-30428f72="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-30428f72="">
          <div data-v-30428f72=""></div>
        </div>
      </div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for unfavorites 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5baa2f3a="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="width: 15px; height: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-30428f72="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-30428f72="">
          <p data-v-30428f72="">Removed from favorites</p>
        </div>
      </div>
      <div data-v-30428f72="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-30428f72="">
          <div data-v-30428f72=""></div>
        </div>
      </div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;
